test/inference/bad/typeclass_use_r.mle
class R 'a { read : unit -> 'a }
let (r : 'a) = read['a] ()